--- a/src/pages/UI-kit/colors-type/colors-type.pug
+++ b/src/pages/UI-kit/colors-type/colors-type.pug
@@ -3,6 +3,15 @@ include ../../../components/block-color/block-color.pug
 include ../../../components/type/type.pug
 
 
+-
+  const blocksColor = [{color: "dark_shade-100", name: "Dark Shade 100%", rgb: "#1F2041"},{color: "dark_shade-75", name: "Dark Shade 75%", rgb: "#1F2041"},
+                      {color: "dark_shade-50", name: "Dark Shade 50%", rgb: "#1F2041"},{color: "dark_shade-25", name: "Dark Shade 25%", rgb: "#1F2041"},
+                      {color: "dark_shade-05", name: "Dark Shade 5%", rgb: "#1F2041"},{color: "purple", name: "Purple", rgb: "#BC9CFF"},
+                      {color: "green", name: "Green", rgb: "#6FCF97"}]
+
+  const types = [{title: "H1", text: "This one is the sub-section or widget title"},{title: "H2", text: "Next one is the item title inside widgets"},
+                      {title: "H3", text: "This is a label or CTA text"},{title: "body", text: "This is the body text which is used for most of the design, like paragraphs, lists, etc."}]
+
 doctype html
 html(lang="ru")
   head
@@ -13,29 +22,14 @@ html(lang="ru")
     title Colors&Type
   body
     .logo
-      +logo()
+      .logo__wrapper
+        +logo()
     .colors-type
-      .blocks-color 
-        .blocks-color__block-color   
-          +block-color({color: "dark_shade-100", name: "Dark Shade 100%", rgb: "#1F2041"})
-        .blocks-color__block-color 
-          +block-color({color: "dark_shade-75", name: "Dark Shade 75%", rgb: "#1F2041"})
-        .blocks-color__block-color 
-          +block-color({color: "dark_shade-50", name: "Dark Shade 50%", rgb: "#1F2041"})
-        .blocks-color__block-color 
-          +block-color({color: "dark_shade-25", name: "Dark Shade 25%", rgb: "#1F2041"})
-        .blocks-color__block-color 
-          +block-color({color: "dark_shade-05", name: "Dark Shade 5%", rgb: "#1F2041"})
-        .blocks-color__block-color 
-          +block-color({color: "purple", name: "Purple", rgb: "#BC9CFF"})
-        .blocks-color__block-color 
-          +block-color({color: "green", name: "Green", rgb: "#6FCF97"})
+      .blocks-color
+        each item in blocksColor
+          .blocks-color__block-color
+            +block-color(item)
       .types
-        .types__type
-          +type({title: "H1", text: "This one is the sub-section or widget title"})
-        .types__type
-          +type({title: "H2", text: "Next one is the item title inside widgets"})
-        .types__type
-          +type({title: "H3", text: "This is a label or CTA text"})
-        .types__type
-          +type({title: "body", text: "This is the body text which is used for most of the design, like paragraphs, lists, etc."})
+        each item in types
+          .types__type
+            +type(item)
