--- a/src/pages/websitePages/registration/registration.scss
+++ b/src/pages/websitePages/registration/registration.scss
@@ -5,8 +5,7 @@
 @import '../../../components/sign-up-card/sign-up-card.scss';
 
 body {
-  max-width: 1440px;
-  margin: 0 auto;
+  margin: 0;
   background: #f4f4f6;
 }
 
