--- a/src/components/abouts-room/abouts-room.scss
+++ b/src/components/abouts-room/abouts-room.scss
@@ -7,6 +7,7 @@
   margin-bottom: 20px;
   &:last-child{
     margin-bottom: 0px;
+    border: none;
   }
   &__icon{
     font-family: $material-icons;
