--- a/src/pages/websitePages/room-details/room-details.scss
+++ b/src/pages/websitePages/room-details/room-details.scss
@@ -1,27 +1,177 @@
-@import '../../../scss/fonts.scss';
-@import '../../../scss/colors.scss';
-@import '../../../components/header/header.scss';
-@import '../../../components/footer/footer.scss';
+@import "../../../scss/fonts.scss";
+@import "../../../scss/colors.scss";
+@import "../../../components/header/header.scss";
+@import "../../../components/footer/footer.scss";
+@import "../../../components/abouts-room/abouts-room.scss";
+@import "../../../components/comment/comment.scss";
+@import "../../../components/bullet-list/bullet-list.scss";
+@import "../../../components/booking-room-card/booking-room-card.scss";
 
 body {
-  max-width: 1440px;
-  margin: 0 auto;
-  background: #f4f4f6;
+  margin: 0;
 }
 
-.room-details{
-  &__images{
+.room-details {
+  &__images {
     display: flex;
   }
-  &__left-image{
+  &__left-image {
     width: 68.125%;
   }
-  &__right-images{
+  &__right-images {
     display: flex;
     flex-direction: column;
     width: 31.875%;
   }
-  &__image{
+  &__image {
     width: 100%;
+    display: block;
+  }
+  &__content {
+    max-width: 1160px;
+    margin: 70px auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    @media (max-width: 1440px) {
+      padding: 0 5.21vw;
+    }
+    @media (max-width: 1230px) {
+      justify-content: center;
+    }
+  }
+  &__info {
+    max-width: 712px;
+  }
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    @media (max-width: 635px) {
+      justify-content: center;
+    }
+    &_impr {
+      margin-right: 36px;
+      @media (max-width: 1230px) {
+        margin-right: 0;
+      }
+    }
+    &_text{
+      justify-content: space-between;
+    }
+  }
+  &__room-info {
+    margin-bottom: 13px;
+  }
+  &__text {
+    font-family: $opensans;
+    font-weight: bold;
+    font-size: 19px;
+    line-height: 24px;
+    color: $dark-shade-100;
+    margin-bottom: 20px;
+    &_rules {
+      margin-left: 20px;
+    }
+  }
+  &__diagram {
+    width: 120px;
+    height: 120px;
+    background: url(./img/diagram.png) no-repeat;
+    margin-right: 25px;
+    margin-top: 1px;
+  }
+  &__list {
+    margin-top: 28px;
+    margin-right: 4px;
+    padding: 0;
+    list-style-type: none;
+  }
+  &__el {
+    position: relative;
+    font-family: $montserrat;
+    font-size: 14px;
+    line-height: 24px;
+    color: $dark-shade-75;
+    padding-left: 20px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    &::before {
+      content: "";
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      margin-left: -15px;
+      top: 6px;
+    }
+    &:first-child {
+      &::before {
+        background: linear-gradient(180deg, #ffe39c 0%, #ffba9c 100%);
+      }
+    }
+    &:nth-child(2) {
+      &::before {
+        background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
+      }
+    }
+    &:nth-child(3) {
+      &::before {
+        background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+      }
+    }
+    &:last-child {
+      &::before {
+        background: linear-gradient(180deg, #919191 0%, #3d4975 100%);
+      }
+    }
+  }
+  &__num-of-comments {
+    font-family: $montserrat;
+    font-size: 14px;
+    color: $dark-shade-50;
+    margin-top: 5px;
+  }
+  &__comments {
+    margin-bottom: 29px;
+  }
+  &__comment {
+    margin-bottom: 20px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  &__rules {
+    max-width: 260px;
+    @media (max-width: 670px) {
+      margin-bottom: 10px;
+    }
+  }
+  &__cancel {
+    max-width: 341px;
+    margin-right: 10px;
+    @media (max-width: 1230px) {
+      margin-right: 0;
+    }
+  }
+  &__cancel-text {
+    font-family: $montserrat;
+    font-size: 14px;
+    line-height: 24px;
+    color: $dark-shade-75;
+  }
+  &__booking-room-card {
+    width: 380px;
+    padding-left: 10px;
+    @media (max-width: 1230px) {
+      margin-top: 10px;
+    }
+    @media (max-width: 1218px) {
+      padding: 0;
+    }
+  }
+  &__footer {
+    border-top: 1px solid $dark-shade-25;
   }
 }
