--- a/src/pages/UI-kit/cards/cards.pug
+++ b/src/pages/UI-kit/cards/cards.pug
@@ -1,3 +1,4 @@
+include ../../../pug/variables.pug
 include ../../../components/logo/logo.pug
 include ../../../components/search-room-card/search-room-card.pug
 include ../../../components/sign-up-card/sign-up-card.pug
@@ -20,7 +21,8 @@ html(lang="ru")
     title Cards
   body
     .logo
-      +logo
+      .logo__wrapper
+        +logo()
     .cards
       .cards__content
         .cards__column
