--- a/src/pages/UI-kit/cards/cards.scss
+++ b/src/pages/UI-kit/cards/cards.scss
@@ -14,11 +14,18 @@ body {
   background: #f4f4f6;
 }
 .logo {
-  position: absolute;
-  top: 30px;
-  margin-left: 30px;
-  @media (max-width: 880px) {
-      display: none;
+  max-width: 1380px;
+  margin: 0 auto;
+  padding: 0 30px;
+  @media (max-width: 1440px) {
+    padding-left: 2.1vw;
+  }
+  &__wrapper{
+    position: absolute;
+    top: 30px;
+  }
+  @media (max-width: 840px) {
+    display: none;
   }
 }
 .cards{
