Changed px to rem in all project. Added default font-family and font-size to <html> in all pages.

--- a/src/components/block-color/block-color.scss
+++ b/src/components/block-color/block-color.scss
@@ -1,10 +1,10 @@
 .block-color {
   display: flex;
-  font-size: 19px;
-  line-height: 29px;
+  font-size: 1.1875rem;
+  line-height: 1.8125rem;
   &__color {
-    width: 70px;
-    height: 70px;
+    width: 4.375rem;
+    height: 4.375rem;
     border-radius: 6px;
     
     &-dark_shade-100 {
