--- a/src/components/logo/logo.scss
+++ b/src/components/logo/logo.scss
@@ -1,5 +1,6 @@
 .logotype{
   background: url(../../../components/logo/img/logo.svg) no-repeat;
-  width: 48px;
-  height: 48px;
+  background-size: cover;
+  width: 3rem;
+  height: 3rem;
 }
