--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -5,8 +5,7 @@
   &__wrapper{
     display: flex;
     justify-content: space-between;
-    font-family: $montserrat;
-    font-size: 12px;
+    font-size: 0.75rem;
     text-transform: uppercase;
   }
   &__title{
