--- a/src/components/search-room-card/search-room-card.scss
+++ b/src/components/search-room-card/search-room-card.scss
@@ -15,9 +15,9 @@
   &__title{
     font-family: $opensans;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 1.5rem;
     margin-bottom: 20px;
-    line-height: 30px;
+    line-height: 1.875rem;
   }
   &__date-dropdown{
     margin-bottom: 20px;
