--- a/src/components/submit-button/submit-button.scss
+++ b/src/components/submit-button/submit-button.scss
@@ -3,8 +3,8 @@
   &__button {
     width: 100%;
     text-transform: uppercase;
-    font-family: $montserrat;
-    font-size: 12px;
+    font-size: 0.75rem;
+    font-family: inherit;
     line-height: 15px;
     padding-top: 14px;
     padding-bottom: 15px;
