--- a/src/pages/websitePages/sign-in/sign-in.scss
+++ b/src/pages/websitePages/sign-in/sign-in.scss
@@ -4,9 +4,13 @@
 @import '../../../components/footer/footer.scss';
 @import '../../../components/sign-in-card/sign-in-card.scss';
 
+html {
+  font-size: 16px;
+  font-family: $montserrat;
+}
+
 body {
   margin: 0 auto;
-  background: #f4f4f6;
 }
 
 .sign-in{
