--- a/src/components/abouts-room/abouts-room.scss
+++ b/src/components/abouts-room/abouts-room.scss
@@ -11,7 +11,7 @@
   }
   &__icon{
     font-family: $material-icons;
-    font-size: 48px;
+    font-size: 3rem;
     background: $purple-gradient;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -21,9 +21,8 @@
   }
   &__text {
     margin: 0;
-    font-family: $montserrat;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
   }
   &__title{
     font-weight: bold;
