--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -4,9 +4,8 @@
   list-style-type: none;
   &__el{
     position: relative;
-    font-family: $montserrat;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
     color: $dark-shade-75;
     margin-bottom: 10px;
     padding-left: 21px;
@@ -16,12 +15,12 @@
     &::before{
       content: "";
       position: absolute;
-      width: 10px;
-      height: 10px;
+      width: 0.625rem;
+      height: 0.625rem;
       background: $dark-shade-25;
       border-radius: 50%;
       margin-left: -21px;
-      top: 6px;
+      top: 0.375rem;
     }
   }
 }
