--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,8 +1,8 @@
 .button {
   text-transform: uppercase;
-  font-family: $montserrat;
-  font-size: 12px;
-  line-height: 15px;
+  font-family: inherit;
+  font-size: 0.75rem;
+  line-height: 0.9375rem;
   font-weight: bold;
   border-radius: 22px;
   border: none;
