--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -6,9 +6,8 @@
   &__label{
     display: inline-block;
     padding-left: 30px;
-    font-family: $montserrat;
-    font-size: 14px;
-    line-height: 20px;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
     color: $dark-shade-50;
     cursor: pointer;
   }
@@ -23,10 +22,10 @@
     &:checked + .checkbox__box::before{
       content: "";
       position: absolute;
-      top: 4px;
-      left: 6px;
-      width: 6px;
-      height: 8px;
+      top: 0.25rem;
+      left: 0.375rem;
+      width: 0.375rem;
+      height: 0.5rem;
       border-width: 0 2px 2px 0;
       -moz-border-image:  $purple-gradient;
       -webkit-border-image:  $purple-gradient;
@@ -41,8 +40,8 @@
   }
   &__box{
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     box-sizing: border-box;
     margin-left: -30px;
     border: 1px solid $dark-shade-25;
