--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -2,9 +2,8 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  font-family: $montserrat;
   &__title{
-    font-size: 12px;
+    font-size: 0.75rem;
     font-weight: bold;
     text-transform: uppercase;
     color: $dark-shade-100;
@@ -16,16 +15,16 @@
   }
   &__arrow{
     font-family: $material-icons;
-    font-size: 24px;
-    line-height: 42px;
+    font-size: 1.5rem;
+    line-height: 2.5rem;
     text-align: center;
     cursor: default;
-    width: 44px;
+    width: 2.75rem;
     color: $dark-shade-75;
     position: absolute;
     top: 1px;
     right: 1px;
-    width: 43px;
+    width: 2.6875rem;
     border-radius: 4px;
     background-color: white;
     user-select: none;
@@ -36,16 +35,14 @@
   &__input{
     width: 100%;
     outline: none;
-    padding-left: 15px;
-    padding-top: 11.5px;
-    padding-bottom: 12.5px;
+    padding: 0.8125rem 0.3125rem 0.6875rem 0.9375rem;
     background: #FFFFFF;
     border: 1px solid $dark-shade-25;
     box-sizing: border-box;
     border-radius: 4px;
-    font-family: $montserrat;
-    font-size: 14px;
-    line-height: 18px;
+    font-family: inherit;
+    font-size: 0.875rem;
+    line-height: 1.125rem;
     color: $dark-shade-75;
     &::placeholder {
       color: $dark-shade-75;
