--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -1,6 +1,5 @@
 .dropdown{
-  font-family: $montserrat;
-  font-size: 12px;
+  font-size: 0.75rem;
   width: 100%;
   position: relative;
   &__title{
@@ -15,16 +14,16 @@
   }
   &__arrow{
     font-family: $material-icons;
-    font-size: 24px;
-    line-height: 42px;
+    font-size: 1.5rem;
+    line-height: 2.5rem;
     text-align: center;
     cursor: default;
-    width: 44px;
+    width: 2.75rem;
     color: $dark-shade-75;
     position: absolute;
     top: 1px;
     right: 1px;
-    width: 43px;
+    width: 2.6875rem;
     border-radius: 4px;
     background-color: white;
     user-select: none;
@@ -34,14 +33,14 @@
   }
   &__input{
     width: 100%;
-    height: 44px;
-    padding-left: 15px;
+    padding: 0.8125rem 0.3125rem 0.6875rem 0.9375rem;
     background: #FFFFFF;
     border: 1px solid $dark-shade-25;
     box-sizing: border-box;
     border-radius: 4px;
-    font-family: $montserrat;
-    font-size: 14px;
+    font-family: inherit;
+    font-size: 0.875rem;
+    line-height: 1.125rem;
     color: $dark-shade-75;
     cursor: default;
     outline: none;
@@ -86,14 +85,13 @@
   }
   &__button{
     font-family: Arial, sans-serif;
-    font-size: 18px;
+    font-size: 1.125rem;
     color: $dark-shade-50;
     border: 1px solid $dark-shade-25;
-    width: 30px;
-    height: 30px;
-    
+    width: 1.875rem;
+    height: 1.875rem;
     background: none;
-    border-radius: 22px;
+    border-radius: 50%;
     text-transform: uppercase;
     cursor: pointer;
     outline: none;
@@ -104,12 +102,12 @@
   }
   &__minus{
     margin-left: auto; // прижимает кнопки минус, плюс и счётчик вправо.
-    margin-right: 32px;
+    margin-right: 2rem;
   }
   &__count{
     position: absolute;
     font-weight: bold;
-    right: 43px;
+    right: 2.6875rem;
   }
   &__bottom-buttons{
     display: flex;
