--- a/src/components/footer-creative/footer-creative.scss
+++ b/src/components/footer-creative/footer-creative.scss
@@ -18,9 +18,8 @@
     margin-bottom: 18px;
   }
   &__text{
-    font-family: $montserrat;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
     color: $dark-shade-75;
     text-align: center;
     margin-bottom: 27px;
@@ -33,8 +32,8 @@
     &:last-child{
       margin-right: 0;
     }
-    width: 24px;
-    height: 24px;
+    width: 1.5rem;
+    height: 1.5rem;
   }
   &__twitter{
     background: url(../../../components/footer-creative/img/twitter.svg) no-repeat center;
