--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -82,9 +82,8 @@
     }
   }
   &__text{
-    font-family: $montserrat;
-    font-size: 14px;
-    line-height: 20px;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
     color: $dark-shade-50;
     text-decoration: none;
     @media (max-width: 760px) {
@@ -93,17 +92,17 @@
   }
   &__arrow{
     font-family: $material-icons;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: $dark-shade-50;
-    line-height: 20px;
-    width: 24px;
-    height: 21px;
+    line-height: 1.25rem;
+    width: 1.5rem;
+    height: 1.3125rem;
     cursor: pointer;
   }
   &__user-icon{
     display: none;
     font-family: $material-icons;
-    font-size: 35px;
+    font-size: 2.1875rem;
     color: $purple;
     cursor: pointer;
     user-select: none;
@@ -168,7 +167,7 @@
   &__burger{
     display: none;
     font-family: $material-icons;
-    font-size: 41px;
+    font-size: 2.5625rem;
     color: $purple;
     cursor: pointer;
     user-select: none;
