--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -3,10 +3,9 @@
   display: flex;
   justify-content: space-between;
   &__number{
-    width: 40px;
-    font-family: $montserrat;
-    font-size: 12px;
-    line-height: 40px;
+    width: 2.5rem;
+    font-size: 0.75rem;
+    line-height: 2.5rem;
     color: $dark-shade-50;
     text-align: center;
     cursor: pointer;
@@ -21,12 +20,11 @@
       color: white;
       background: $green-gradient;
       border-radius: 22px;
-      font-size: 24px;
+      font-size: 1.5rem;
     }
   }
   &__caption{
-    font-family: $montserrat;
-    font-size: 14px;
+    font-size: 0.875rem;
     color: $dark-shade-75;
     text-align: center;
     margin-top: 10.5px;
