--- a/src/components/radio-button/radio-button.scss
+++ b/src/components/radio-button/radio-button.scss
@@ -6,10 +6,9 @@
   }
   &__label{
     display: inline-block;
-    padding-left: 30px;
-    font-family: $montserrat;
-    font-size: 14px;
-    line-height: 20px;
+    padding-left: 1.875rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
     color: $dark-shade-50;
     cursor: pointer;
   }
@@ -24,23 +23,23 @@
     &:checked + .radio-button__box::before{
       content: "";
       position: absolute;
-      top: 3px;
-      left: 3px;
-      width: 12px;
-      height: 12px;
+      top: 0.1875rem;
+      left: 0.1875rem;
+      width: 0.75rem;
+      height: 0.75rem;
       background: $purple-gradient;
-      border-radius: 10px;
+      border-radius: 50%;
       box-sizing: border-box;
     }
   }
   &__box{
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     box-sizing: border-box;
-    margin-left: -30px;
+    margin-left: -1.875rem;
     border: 1px solid $dark-shade-25;
-    border-radius: 10px;
+    border-radius: 50%;
     background-color: white;
   }
 }
