--- a/src/components/rich-checkbox/rich-checkbox.scss
+++ b/src/components/rich-checkbox/rich-checkbox.scss
@@ -6,10 +6,9 @@
   &__label{
     display: inline-block;
     padding-left: 30px;
-    font-family: $montserrat;
     font-weight: bold;
-    font-size: 14px;
-    line-height: 20px;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
     color: $dark-shade-75;
     cursor: pointer;
   }
@@ -24,10 +23,10 @@
     &:checked + .rich-checkbox__box::before{
       content: "";
       position: absolute;
-      top: 4px;
-      left: 6px;
-      width: 6px;
-      height: 8px;
+      top: 0.25rem;
+      left: 0.375rem;
+      width: 0.375rem;
+      height: 0.5rem;
       border-width: 0 2px 2px 0;
       -moz-border-image:  $purple-gradient;
       -webkit-border-image:  $purple-gradient;
@@ -42,8 +41,8 @@
   }
   &__box{
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 1.25rem;
+    height: 1.25rem;
     box-sizing: border-box;
     margin-left: -30px;
     border: 1px solid $dark-shade-25;
@@ -54,8 +53,8 @@
     padding-left: 30px;
     margin-top: 4px;
     font-family: $montserrat;
-    font-size: 12px;
-    line-height: 14px;
+    font-size: 0.75rem;
+    line-height: 0.875rem;
     color: $dark-shade-50;
   }
 }
