--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -57,9 +57,8 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    font-family: $montserrat;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 0.875rem;
     &:last-child{
       align-items: center;
     }
@@ -67,7 +66,7 @@
   &__number{
     font-family: $opensans;
     color: $dark-shade-100;
-    font-size: 20px;
+    font-size: 1.25rem;
     margin-left: 4px;
     &_no-lux{
       margin-right: auto;
@@ -76,7 +75,7 @@
   &__lux{
     margin-left: 5px;
     color: $purple;
-    font-size: 12px;
+    font-size: 0.75rem;
     margin-right: auto;
   }
   &__cost{
@@ -86,7 +85,7 @@
   &__for-day{
     color: $dark-shade-50;
     font-weight: normal;
-    font-size: 12px;
+    font-size: 0.75rem;
   }
   &__border{
     width: 100%;
@@ -102,8 +101,8 @@
   &__comments{
     color: $dark-shade-50;
     font-weight: normal;
-    font-size: 14px;
+    font-size: 0.875rem;
     margin-right: 3px;
-    line-height: 14px;
+    line-height: 0.875rem;
   }
 }
