--- a/src/components/sign-up-card/sign-up-card.scss
+++ b/src/components/sign-up-card/sign-up-card.scss
@@ -15,9 +15,9 @@
   &__title{
     font-family: $opensans;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 1.5rem;
     margin-bottom: 20px;
-    line-height: 30px;
+    line-height: 1.875rem;
   }
   &__name{
     margin-bottom: 10px;
@@ -52,7 +52,7 @@
   }
   &__sign-in-text{
     font-family: $montserrat;
-    font-size: 14px;
+    font-size: 0.875rem;
   }
   &__sign-in-button{
   }
