--- a/src/components/text-fields/text-fields.scss
+++ b/src/components/text-fields/text-fields.scss
@@ -2,8 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  font-family: $montserrat;
-  font-size: 12px;
+  font-size: 0.75rem;
   &__title {
     text-transform: uppercase;
     font-weight: bold;
@@ -18,10 +17,11 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 44px;
-    height: 44px;
+    width: 2.75rem;
+    height: 2.75rem;
     font-family: $material-icons;
-    font-size: 24px;
+    font-size: 1.5rem;
+    line-height: 2.625rem;
     background: $purple-gradient;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -33,8 +33,8 @@
       position: absolute;
       top: 1px;
       right: 1px;
-      width: 43px;
-      height: 42px;
+      width: 2.6875rem;
+      height: 2.5rem;
       border-radius: 4px;
     }
     &:hover ~ .subscription-text-field__input {
@@ -46,18 +46,17 @@
     position: relative;
   }
   &__input{
-    outline: none;
     width: 100%;
-    padding-top: 13px;
-    padding-bottom: 11px;
-    padding-left: 15px;
+    padding: 0.8125rem 0.3125rem 0.6875rem 0.9375rem;
     background: #FFFFFF;
     border: 1px solid $dark-shade-25;
     box-sizing: border-box;
     border-radius: 4px;
-    font-family: $montserrat;
-    font-size: 14px;
+    font-family: inherit;
+    font-size: .875rem;
+    line-height: 1.125rem;
     color: $dark-shade-75;
+    outline: none;
     &::placeholder {
       color: $dark-shade-25;
     }
