--- a/src/components/type/type.scss
+++ b/src/components/type/type.scss
@@ -4,46 +4,43 @@
     min-width: 37px;
     text-align: right;
     color: $dark-shade-25;
-    font-family: $montserrat;
     font-weight: normal;
     &_H1 {
-      font-size: 24px;
+      font-size: 1.5rem;
     }
     &_H2 {
-      font-size: 19px;
+      font-size: 1.1875rem;
     }
     &_H3 {
-      font-size: 12px;
+      font-size: 0.75rem;
     }
     &_body {
-      font-size: 14px;
+      font-size: 0.875rem;
     }
   }
   &__text {
     margin: 0;
     margin-left: 30px;
     &_H1 {
-      font-size: 24px;
+      font-size: 1.5rem;
       font-family: $quicksand;
       font-weight: bold;
       color: $dark-shade-100;
     }
     &_H2 {
-      font-size: 19px;
+      font-size: 1.1875rem;
       font-family: $quicksand;
       font-weight: bold;
       color: $dark-shade-100;
     }
     &_H3 {
-      font-size: 12px;
-      font-family: $montserrat;
+      font-size: 0.75rem;
       font-weight: bold;
       text-transform: uppercase;
       color: $dark-shade-100;
     }
     &_body {
-      font-size: 14px;
-      font-family: $montserrat;
+      font-size: 0.875rem;
       font-weight: normal;
       color: $dark-shade-75;
       line-height: 24px;
