--- a/src/pages/UI-kit/colors-type/colors-type.scss
+++ b/src/pages/UI-kit/colors-type/colors-type.scss
@@ -4,8 +4,13 @@
 @import '../../../components/block-color/block-color.scss';
 @import '../../../components/type/type.scss';
 
+html {
+  font-size: 16px;
+  font-family: $montserrat;
+}
+
 body {
-  margin: 0 auto;
+  margin: 0;
 }
 .logo {
   max-width: 1380px;
