--- a/src/pages/websitePages/landing-page/landing-page.scss
+++ b/src/pages/websitePages/landing-page/landing-page.scss
@@ -4,9 +4,13 @@
 @import '../../../components/footer/footer.scss';
 @import '../../../components/search-room-card/search-room-card.scss';
 
+html {
+  font-size: 16px;
+  font-family: $montserrat;
+}
+
 body {
   margin: 0;
-  background: #f4f4f6;
 }
 
 .landing-page{
@@ -29,9 +33,8 @@ body {
     }
   }
   &__text{
-    font-family: $montserrat;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
     text-align: right;
     color: $dark-shade-75;
     width: 297px;
